; ModuleID = '/home/carl/AnghaBench/libgit2/src/transports/extr_cred.c_git_cred_ssh_key_memory_new.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/transports/extr_cred.c_git_cred_ssh_key_memory_new.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GIT_ERROR_INVALID = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [67 x i8] c"this version of libgit2 was not built with ssh memory credentials.\00", align 1
@GIT_CREDTYPE_SSH_MEMORY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_cred_ssh_key_memory_new(i32** %0, i8* %1, i8* %2, i8* %3, i8* %4) #0 {
  %6 = alloca i32**, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  store i32** %0, i32*** %6, align 8
  store i8* %1, i8** %7, align 8
  store i8* %2, i8** %8, align 8
  store i8* %3, i8** %9, align 8
  store i8* %4, i8** %10, align 8
  %11 = load i32**, i32*** %6, align 8
  %12 = bitcast i32** %11 to i8*
  %13 = call i32 @GIT_UNUSED(i8* %12)
  %14 = load i8*, i8** %7, align 8
  %15 = call i32 @GIT_UNUSED(i8* %14)
  %16 = load i8*, i8** %8, align 8
  %17 = call i32 @GIT_UNUSED(i8* %16)
  %18 = load i8*, i8** %9, align 8
  %19 = call i32 @GIT_UNUSED(i8* %18)
  %20 = load i8*, i8** %10, align 8
  %21 = call i32 @GIT_UNUSED(i8* %20)
  %22 = load i32, i32* @GIT_ERROR_INVALID, align 4
  %23 = call i32 @git_error_set(i32 %22, i8* getelementptr inbounds ([67 x i8], [67 x i8]* @.str, i64 0, i64 0))
  ret i32 -1
}

declare dso_local i32 @GIT_UNUSED(i8*) #1

declare dso_local i32 @git_error_set(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
